sua lai dto getall và dto detail tranh du lieu thừa